logs/to_posgrest_v3/create_postgres_table/2023-03-20T12:47:05.356913+00:00/1.log
[2023-03-20 12:47:07,360] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v3.create_postgres_table manual__2023-03-20T12:47:05.356913+00:00 [queued]>
[2023-03-20 12:47:07,395] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v3.create_postgres_table manual__2023-03-20T12:47:05.356913+00:00 [queued]>
[2023-03-20 12:47:07,396] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 12:47:07,397] {taskinstance.py:1239} INFO - Starting attempt 1 of 2
[2023-03-20 12:47:07,398] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 12:47:07,438] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2023-03-20 12:47:05.356913+00:00
[2023-03-20 12:47:07,443] {standard_task_runner.py:52} INFO - Started process 3436 to run task
[2023-03-20 12:47:07,451] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'to_posgrest_v3', 'create_postgres_table', 'manual__2023-03-20T12:47:05.356913+00:00', '--job-id', '12', '--raw', '--subdir', 'DAGS_FOLDER/to_postgresql.py', '--cfg-path', '/tmp/tmpapoltyax', '--error-file', '/tmp/tmp9t3x7a46']
[2023-03-20 12:47:07,454] {standard_task_runner.py:77} INFO - Job 12: Subtask create_postgres_table
[2023-03-20 12:47:07,759] {logging_mixin.py:109} INFO - Running <TaskInstance: to_posgrest_v3.create_postgres_table manual__2023-03-20T12:47:05.356913+00:00 [running]> on host 0b4cdb459521
[2023-03-20 12:47:08,094] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=sakabuana31
AIRFLOW_CTX_DAG_ID=to_posgrest_v3
AIRFLOW_CTX_TASK_ID=create_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2023-03-20T12:47:05.356913+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-20T12:47:05.356913+00:00
[2023-03-20 12:47:08,176] {base.py:79} INFO - Using connection to: id: postgres_localhost. Host: host.docker.internal, Port: 5432, Schema: final, Login: ***, Password: ***, extra: {}
[2023-03-20 12:47:08,265] {dbapi.py:225} INFO - Running statement: 
            create table if not exists temperature (
                date DATE PRIMARY KEY,
                min DECIMAL(5, 2),
                max DECIMAL(5, 2),
                normal_min DECIMAL(5, 2),
                normal_max DECIMAL(5, 2),
                mean DECIMAL(5, 2),
                status_temp int
            ) ON CONFLICT DO NOTHING;
        , parameters: None
[2023-03-20 12:47:08,270] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CONFLICT"
LINE 10:             ) ON CONFLICT DO NOTHING;
                          ^

[2023-03-20 12:47:08,368] {taskinstance.py:1277} INFO - Marking task as UP_FOR_RETRY. dag_id=to_posgrest_v3, task_id=create_postgres_table, execution_date=20230320T124705, start_date=20230320T124707, end_date=20230320T124708
[2023-03-20 12:47:08,409] {standard_task_runner.py:92} ERROR - Failed to execute job 12 for task create_postgres_table
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CONFLICT"
LINE 10:             ) ON CONFLICT DO NOTHING;
                          ^

[2023-03-20 12:47:08,425] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-20 12:47:08,652] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
